force-app/main/default/objects/Account_Plan_Completion__c/Account_Plan_Completion__c.object-meta.xml
<CustomObject>
    <label>Account Plan Completion</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Account Plan Completion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Completion</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>