force-app/main/default/objects/Account_Plan_Completion__c/fields/Account_Plan_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Company_Profile__c</fullName>
    <label>Account Plan Company Profile</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Account Plan Completion</relationshipLabel>
    <relationshipName>Account_Plan_Completion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>