force-app/main/default/objects/Account_Plan_Completion__c/fields/Account_Plan_Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Completion_Percentage__c</fullName>
    <formula>if(Account_Plan_Company_Profile__r.isMiniMode__c, 
Account_Plan_Completion_Percentage_SE__c 
, 
if(isblank( Account_Plan_Group_Profile__c ), 
(Step_2_Percentage__c + 
Step_3_Percentage__c + 
Step_4_Percentage__c + 
Step_5_Percentage__c )/4 
, 
(Step_1_Percentage__c + 
Step_2_Percentage__c + 
Step_3_Percentage__c + 
Step_4_Percentage__c + 
Step_5_Percentage__c )/5 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Completion Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>