force-app/main/default/objects/Account_Plan_Completion__c/fields/Account_Plan_Completion_Percentage_SE__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Completion_Percentage_SE__c</fullName>
    <formula>if(isblank( Account_Plan_Group_Profile__c ), 
(Step_2_Percentage__c +  
Step_4_Percentage__c + 
Step_5_Percentage__c )/3 
, 
(Step_1_Percentage__c + 
Step_2_Percentage__c + 
Step_4_Percentage__c + 
Step_5_Percentage__c )/4 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Completion Percentage SE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>