force-app/main/default/objects/Account_Plan_Completion__c/fields/Account_Plan_Group_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Group_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Group Profile</label>
    <referenceTo>AcctPlanGroupProfile__c</referenceTo>
    <relationshipLabel>Account Plan Completion</relationshipLabel>
    <relationshipName>Account_Plan_Completion</relationshipName>
    <type>Lookup</type>
</CustomField>