force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Percentage__c</fullName>
    <formula>Step_1_Entered_Fields__c /Step_1_Required_fields__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 1 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>