force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_1_Required_fields__c.field-meta.xml
<CustomField>
    <fullName>Step_1_Required_fields__c</fullName>
    <label>Step 1 Required fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>