force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_3_1_Entered_Fields__c.field-meta.xml
<CustomField>
    <fullName>Step_3_1_Entered_Fields__c</fullName>
    <label>Step 3-1 Entered Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>