force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_3_2_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Step_3_2_Percentage__c</fullName>
    <formula>Step_3_2_Entered_Fields__c/Step_3_2_Required_Fields__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 3-2 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>