force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_3_3_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Step_3_3_Required_Fields__c</fullName>
    <label>Step 3-3 Required Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>