force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_3_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Percentage__c</fullName>
    <formula>( Step_3_1_Percentage__c  + Step_3_2_Percentage__c + Step_3_3_Percentage__c + Step_3_4_Percentage__c )/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 3 Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>