force-app/main/default/objects/Account_Plan_Completion__c/fields/Step_3_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Required_Fields__c</fullName>
    <formula>Step_3_1_Required_Fields__c + Step_3_2_Required_Fields__c + Step_3_3_Required_Fields__c + Step_3_4_Required_Fields__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step 3 Required_Fields</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>