force-app/main/default/objects/Account_Plan_Completion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Plan_Company_Profile__c</columns>
    <columns>Account_Plan_Completion_Percentage__c</columns>
    <columns>Account_Plan_Group_Profile__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>